[Autofill Views] Expanding a11y data

This CL adds the disambiguation information and the credit card network
icon to the accessible data, when these fields are present.

Change-Id: I198e0af4d058290f4a572d2534aec2bbd56beda3
Bug: 847586

TBR=avi@chromium.org

Change-Id: I198e0af4d058290f4a572d2534aec2bbd56beda3
Reviewed-on: https://chromium-review.googlesource.com/1077335
Commit-Queue: Tommy Martino <tmartino@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Rachel Blum <groby@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566608}
Former-commit-id: 6a3531249d2e915a7ce4728f347c3fcdc92e3542